WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128873
REGRESSION (
r158254
): Rubber-banding at Bing image search causes the toolbar to move up and away
https://bugs.webkit.org/show_bug.cgi?id=128873
Summary
REGRESSION (r158254): Rubber-banding at Bing image search causes the toolbar ...
mitz
Reported
2014-02-15 12:31:44 PST
To reproduce: navigate to the URL, and try to scroll up, causing the page to rubber-band at the top. As the page bounces back up, the toolbar at the top moves up and out of view. This was caused by <
http://trac.webkit.org/r158254
>, the fix for
bug 122882
.
Attachments
Patch
(18.71 KB, patch)
2014-03-05 06:45 PST
,
gur.trio
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(463.47 KB, application/zip)
2014-03-05 07:44 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(488.62 KB, application/zip)
2014-03-05 08:03 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion
(489.48 KB, application/zip)
2014-03-05 09:07 PST
,
Build Bot
no flags
Details
Patch
(19.15 KB, patch)
2014-03-05 21:05 PST
,
gur.trio
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-02-15 12:33:05 PST
<
rdar://problem/16078154
>
Ryosuke Niwa
Comment 2
2014-02-15 13:04:23 PST
In that case, we need to revert both
http://trac.webkit.org/changeset/158254
and
http://trac.webkit.org/changeset/154614
. These changes are simply not Web compatible.
gur.trio
Comment 3
2014-02-18 01:50:38 PST
(In reply to
comment #2
)
> In that case, we need to revert both
http://trac.webkit.org/changeset/158254
and
http://trac.webkit.org/changeset/154614
. These changes are simply not Web compatible.
Revert this as well
http://trac.webkit.org/changeset/156605
.
Antonio Gomes
Comment 4
2014-02-18 04:50:12 PST
(In reply to
comment #3
)
> (In reply to
comment #2
) > > In that case, we need to revert both
http://trac.webkit.org/changeset/158254
and
http://trac.webkit.org/changeset/154614
. These changes are simply not Web compatible. > > Revert this as well
http://trac.webkit.org/changeset/156605
.
Agreed the middle term solution (body.scrolltop == documentElement.scrollTop) is not ideal. For the record, Blink has also moved away from such a change. It has the exclusive behavior under a runtime flag for now.
gur.trio
Comment 5
2014-02-18 05:42:19 PST
Do we need to revert all the changes or just
http://trac.webkit.org/changeset/158254
which was done to fix
https://bugs.webkit.org/show_bug.cgi?id=122882
and partial revert of
http://trac.webkit.org/changeset/154614
and
http://trac.webkit.org/changeset/156605
.
Ryosuke Niwa
Comment 6
2014-02-22 15:33:52 PST
(In reply to
comment #5
)
> Do we need to revert all the changes or just
http://trac.webkit.org/changeset/158254
which was done to fix
https://bugs.webkit.org/show_bug.cgi?id=122882
and partial revert of
http://trac.webkit.org/changeset/154614
and
http://trac.webkit.org/changeset/156605
.
We need to revert all changes.
gur.trio
Comment 7
2014-03-05 06:45:01 PST
Created
attachment 225879
[details]
Patch
gur.trio
Comment 8
2014-03-05 06:46:37 PST
(In reply to
comment #7
)
> Created an attachment (id=225879) [details] > Patch
Sorry for the delay. I tried reverting webkitbot: rollout but that did not work so had to do it manually.
Build Bot
Comment 9
2014-03-05 07:44:50 PST
Comment on
attachment 225879
[details]
Patch
Attachment 225879
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4875165334765568
New failing tests: http/tests/navigation/anchor-frames.html
Build Bot
Comment 10
2014-03-05 07:44:52 PST
Created
attachment 225883
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 11
2014-03-05 08:03:38 PST
Comment on
attachment 225879
[details]
Patch
Attachment 225879
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5140268969885696
New failing tests: http/tests/navigation/anchor-frames.html
Build Bot
Comment 12
2014-03-05 08:03:43 PST
Created
attachment 225886
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 13
2014-03-05 09:07:43 PST
Comment on
attachment 225879
[details]
Patch
Attachment 225879
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6139844224876544
New failing tests: http/tests/navigation/anchor-frames.html
Build Bot
Comment 14
2014-03-05 09:07:49 PST
Created
attachment 225889
[details]
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.5
gur.trio
Comment 15
2014-03-05 21:05:03 PST
Created
attachment 225948
[details]
Patch
Antonio Gomes
Comment 16
2014-03-06 04:50:29 PST
Comment on
attachment 225948
[details]
Patch There might be a chance to try again this change when Blink moves on and enabled this switch.
WebKit Commit Bot
Comment 17
2014-03-06 05:22:23 PST
Comment on
attachment 225948
[details]
Patch Clearing flags on attachment: 225948 Committed
r165185
: <
http://trac.webkit.org/changeset/165185
>
WebKit Commit Bot
Comment 18
2014-03-06 05:22:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug