REGRESSION (r158254): Rubber-banding at Bing image search causes the toolbar to move up and away https://bugs.webkit.org/show_bug.cgi?id=128873

Patch by Gurpreet Kaur <k.gurpreet@samsung.com> on 2014-03-06
Reviewed by Antonio Gomes.

Source/WebCore:

This regression is caused by  http://trac.webkit.org/changeset/154614
and http://trac.webkit.org/changeset/156605. So reverting the changes
to make it Web compatible as earlier.

* dom/Element.cpp:
(WebCore::Element::scrollLeft):
(WebCore::Element::scrollTop):
(WebCore::Element::setScrollLeft):
(WebCore::Element::setScrollTop):
Reverting changes as it caused regression.

LayoutTests:

* fast/css/zoom-body-scroll-expected.txt:
* fast/css/zoom-body-scroll.html:
* fast/dom/Element/documentElement-scrollLeft-expected.txt:
* fast/dom/Element/documentElement-scrollLeft.html:
* fast/dom/Element/documentElement-scrollTop-expected.txt:
* fast/dom/Element/documentElement-scrollTop.html:
* fast/dom/Element/scrollLeft-expected.txt:
* fast/dom/Element/scrollLeft.html:
* fast/dom/Element/scrollTop-expected.txt:
* fast/dom/Element/scrollTop.html:
* fast/events/mouse-cursor.html:
* fast/multicol/scrolling-overflow.html:
* http/tests/navigation/anchor-frames-expected.txt:
* http/tests/navigation/anchor-frames-gbk-expected.txt:
* http/tests/navigation/resources/frame-with-anchor-gbk.html:
* http/tests/navigation/resources/frame-with-anchor-same-origin.html:
* http/tests/navigation/resources/frame-with-anchor.html:
* platform/mac-wk2/tiled-drawing/resources/scroll-and-load-page.html:
* platform/mac-wk2/tiled-drawing/tiled-drawing-scroll-position-page-cache-restoration.html:
Reverting changes as it caused regression.

Canonical link: https://commits.webkit.org/147830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165185 268f45cc-cd09-0410-ab3c-d52691b4dbfc